[package]
name = "vite_tui"
version = "0.0.0"
edition.workspace = true
include = ["/src"]
license.workspace = true
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
portable-pty = { workspace = true }
ratatui = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tui-term = { workspace = true }

tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
